// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlightRTFRenderer should encode curly brackets and back slashes 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl\\\\red68\\\\green68\\\\blue68;\\\\red136\\\\green136\\\\blue136;\\\\red136\\\\green0\\\\blue0;\\\\red188\\\\green96\\\\blue96;\\\\red120\\\\green169\\\\blue96;\\\\red57\\\\green115\\\\blue0;\\\\red31\\\\green113\\\\blue153;\\\\red77\\\\green153\\\\blue191;}
\\\\f0\\\\fs40
{\\\\cf0 \\\\{\\\\par
    \\\\\\\\ test\\\\par
    \\\\}}
}"
`;

exports[`highlightRTFRenderer should encode double unicode symbols 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl\\\\red68\\\\green68\\\\blue68;\\\\red136\\\\green136\\\\blue136;\\\\red136\\\\green0\\\\blue0;\\\\red188\\\\green96\\\\blue96;\\\\red120\\\\green169\\\\blue96;\\\\red57\\\\green115\\\\blue0;\\\\red31\\\\green113\\\\blue153;\\\\red77\\\\green153\\\\blue191;}
\\\\f0\\\\fs40
{\\\\cf0 {\\\\u4096} {\\\\u55203} {\\\\u8597} {\\\\u8597}{\\\\u65038} {\\\\u40726}}
}"
`;

exports[`highlightRTFRenderer should encode single unicode symbols 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl\\\\red68\\\\green68\\\\blue68;\\\\red136\\\\green136\\\\blue136;\\\\red136\\\\green0\\\\blue0;\\\\red188\\\\green96\\\\blue96;\\\\red120\\\\green169\\\\blue96;\\\\red57\\\\green115\\\\blue0;\\\\red31\\\\green113\\\\blue153;\\\\red77\\\\green153\\\\blue191;}
\\\\f0\\\\fs40
{\\\\cf0 {\\\\u226} {\\\\u8364} {\\\\u164} {\\\\u1082}{\\\\u1072}{\\\\u1078}{\\\\u1076}{\\\\u1086}{\\\\u1081}}
}"
`;

exports[`highlightRTFRenderer should not add white spaces 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl\\\\red68\\\\green68\\\\blue68;\\\\red136\\\\green136\\\\blue136;\\\\red136\\\\green0\\\\blue0;\\\\red188\\\\green96\\\\blue96;\\\\red120\\\\green169\\\\blue96;\\\\red57\\\\green115\\\\blue0;\\\\red31\\\\green113\\\\blue153;\\\\red77\\\\green153\\\\blue191;}
\\\\f0\\\\fs40
{\\\\cf0 test.then((result) => \\\\{\\\\par
  {\\\\cf5 console}.log(result.stdout)\\\\par
\\\\})}
}"
`;

exports[`highlightRTFRenderer should render a string 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl\\\\red68\\\\green68\\\\blue68;\\\\red136\\\\green136\\\\blue136;\\\\red136\\\\green0\\\\blue0;\\\\red188\\\\green96\\\\blue96;\\\\red120\\\\green169\\\\blue96;\\\\red57\\\\green115\\\\blue0;\\\\red31\\\\green113\\\\blue153;\\\\red77\\\\green153\\\\blue191;}
\\\\f0\\\\fs40
{\\\\cf0 {\\\\b const} a = {\\\\cf2 \\"foo\\"};}
}"
`;

exports[`highlightRTFRenderer should render javascript 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl\\\\red0\\\\green0\\\\blue0;\\\\red0\\\\green106\\\\blue0;\\\\red170\\\\green13\\\\blue145;\\\\red0\\\\green0\\\\blue136;\\\\red102\\\\green102\\\\blue0;\\\\red196\\\\green26\\\\blue22;\\\\red0\\\\green136\\\\blue0;\\\\red28\\\\green0\\\\blue207;\\\\red92\\\\green38\\\\blue153;\\\\red238\\\\green238\\\\blue238;\\\\red186\\\\green238\\\\blue186;\\\\red255\\\\green200\\\\blue189;\\\\red155\\\\green112\\\\blue63;}
\\\\f0\\\\fs40
{\\\\cf0 settings.set({\\\\cf5 'user.name'}, \\\\{\\\\par
  {\\\\cf8 first}: {\\\\cf5 'Cosmo'},\\\\par
  {\\\\cf8 last}: {\\\\cf5 'Kramer'}\\\\par
\\\\}).then({\\\\cf8 ()} => \\\\{\\\\par
  settings.get({\\\\cf5 'user.name.first'}).then({\\\\cf8 val} => \\\\{\\\\par
    {\\\\cf8 console}.log(val);\\\\par
    {\\\\cf1 // => 'Cosmo'}\\\\par
  \\\\});\\\\par
\\\\});\\\\par
}
}"
`;

exports[`highlightRTFRenderer should render multiple lines 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl\\\\red68\\\\green68\\\\blue68;\\\\red136\\\\green136\\\\blue136;\\\\red136\\\\green0\\\\blue0;\\\\red188\\\\green96\\\\blue96;\\\\red120\\\\green169\\\\blue96;\\\\red57\\\\green115\\\\blue0;\\\\red31\\\\green113\\\\blue153;\\\\red77\\\\green153\\\\blue191;}
\\\\f0\\\\fs40
{\\\\cf0 line1\\\\par
line2\\\\par
\\\\par
\\\\par
line5\\\\par
}
}"
`;

exports[`highlightRTFRenderer should render specific styles 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl\\\\red0\\\\green0\\\\blue0;\\\\red0\\\\green106\\\\blue0;\\\\red170\\\\green13\\\\blue145;\\\\red0\\\\green0\\\\blue136;\\\\red102\\\\green102\\\\blue0;\\\\red196\\\\green26\\\\blue22;\\\\red0\\\\green136\\\\blue0;\\\\red28\\\\green0\\\\blue207;\\\\red92\\\\green38\\\\blue153;\\\\red238\\\\green238\\\\blue238;\\\\red186\\\\green238\\\\blue186;\\\\red255\\\\green200\\\\blue189;\\\\red155\\\\green112\\\\blue63;}
\\\\f0\\\\fs40
{\\\\cf0 \\\\par
{\\\\cf1 // Comment}\\\\par
{\\\\cf2 function} {\\\\cf8 test}({\\\\cf8 }) \\\\{\\\\}\\\\par
}
}"
`;
